fixes navbar pull-right and disables collapsing effect

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,6 +73,22 @@ h1, h2, h3, h4 {
   margin-right:10px;
 }
 
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
+}
+
 .text-center {
   text-align: center !important;
 }
